added phone animation roll up

--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
                 <div class="dropZoneCover"></div>
             </div>
         </div>
-        <div class="outdoors"></div>
+        <div class="outdoors">
+            <div class="phoneContainer">
+                <div class="screenBack"></div>
+                <div class="screenGloss"></div>
+            </div>
+        </div>
+
     </div>
 </div>
 <script src="ordersDB.js"></script>
