results on phone

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
         <div class="outdoors">
             <div class="phoneContainer">
                 <div class="screenBack"></div>
+
+                <div class="phoneContent">
+                    <div class="dayStat"><h2>Day 1</h2></div>
+                    <div class="cashStat"><h2>Cashmoney: </h2></div>
+                    <div class="ordersCompletedStat"><h2>Orders Completed: </h2></div>
+                </div>
                 <div class="screenGloss"></div>
             </div>
         </div>
